added validateOriginalUrl
